[package]
name = "rsh"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bincode = "1.3.3"
bstr = { version = "0.2.16", features = ["serde1"] }
color-eyre = "0.5.11"
ctrlc = "3.2.0"
derive_more = "0.99.14"
im = { version = "15.0.0", features = ["serde"] }
itertools = "0.10.1"
lalrpop-util = "0.19.6"
lasso = { version = "0.5.1", features = ["serialize"]}
logos = "0.12.0"
once_cell = "1.8.0"
regex = "1.5.4"
ron = "0.6.4"
rustyline = "8.2.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.64"
shared_child = "0.3.5"
structopt = "0.3.22"
thiserror = "1.0.26"
yansi = "0.5.0"

[build-dependencies]
lalrpop = "0.19.6"
