[package]
name = "rsh"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bincode = "1.3.3"
bstr = { version = "0.2.17", features = ["serde1"] }
color-eyre = "0.5.11"
ctrlc = "3.2.0"
derive_more = "0.99.16"
gc = { git = "https://github.com/Manishearth/rust-gc.git", features = ["derive", "serde"] }
itertools = "0.10.1"
lalrpop-util = "0.19.6"
lasso = { version = "0.6.0", features = ["serialize"] }
logos = "0.12.0"
once_cell = "1.8.0"
regex = "1.5.4"
ron = "0.6.5"
rustyline = "9.0.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.68" }
shared_child = "0.3.5"
structopt = "0.3.23"
thiserror = "1.0.29"
yansi = "0.5.0"
tree-sitter-rshcmd = {git = "https://github.com/traxys/tree-sitter-rshcmd"}
tree-sitter-highlight = "0.20.0"
rustyline-derive = "0.5.0"
ansi_term = "0.12.1"
lazy_static = "1.4.0"
tree-sitter = "0.20.0"
which = "4.2.2"

[build-dependencies]
lalrpop = "0.19.6"
